set flex wrap to choices and player-cpu sections

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,7 @@ main {
 .choices {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .choice {
@@ -63,6 +64,7 @@ main h2 {
     display: flex;
     justify-content: center;
     text-align: center;
+    flex-wrap: wrap;
 }
 
 .player {
