--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,8 @@ main {
 .choice {
     /* Avoid stretching of images */
     align-self: baseline;
-    padding: 1rem 3rem;
+    margin: 0rem 3rem;
+    padding: 0.5rem;
     /* Remove default button styling */
     background: none;
     border: none;
