--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,7 +92,8 @@ main h2 {
 
 footer {
     text-align: center;
-    margin-bottom: 0.5rem;
+    background-color: darkgrey;
+    padding-bottom: 0.4rem;
 }
 
 footer a {
