--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,6 +86,15 @@ main h2 {
     min-width: 7rem;
 }
 
+.ties-element {
+    display: table;
+    text-align: center;
+    background-color:#7987BC;
+    border-radius: 1rem;
+    padding: 0.5rem;
+    margin: 0rem auto 1rem auto;
+}
+
 #result {
     text-align: center;
 }
