fix code comment typo in css .choice and fix images path in Testing.md

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,7 +57,7 @@ main {
     display: flex;
     flex-direction: column;
     text-align: center;
-    /* Turn cursor to pointer due to lack of href atribute in a tag */
+    /* Turn cursor to pointer due to lack of href attribute in a tag */
     cursor: pointer;
 }
 
