--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,6 +113,16 @@ main h2 {
     margin: 1rem auto 1rem auto;
 }
 
+.reset-button {
+    text-align: center;
+    font-family: 'Dosis', sans-serif;
+    font-size: 1.5rem;
+    margin: 0.5rem;
+    padding: 0.5rem;
+    font-weight: 700;
+    border-radius: 0.5rem;
+}
+
 footer {
     text-align: center;
     background-color: darkgrey;
